# UniversityDatabase/src/main/java/hu/vargyasb/universitydatabase/model/TimeTableItem.java
@@ -1,0 +1,41 @@
+package hu.vargyasb.universitydatabase.model;
+
+import java.time.LocalTime;
+
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.ManyToOne;
+
+import org.hibernate.envers.Audited;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+import lombok.ToString;
+
+@Entity
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@EqualsAndHashCode(onlyExplicitlyIncluded = true)
+@ToString(onlyExplicitlyIncluded = true)
+@Audited
+public class TimeTableItem {
+
+	@Id
+	@GeneratedValue
+	@ToString.Include
+	@EqualsAndHashCode.Include
+	private int id;
+	
+	private int dayOfWeek;
+	private LocalTime startLesson;
+	private LocalTime endLesson;
+	
+	@ManyToOne
+	private Course course;
+}
